Fix align-items value

--- a/src/style/wordScramble.css
+++ b/src/style/wordScramble.css
@@ -155,7 +155,7 @@ body, input {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	align-items: space-around;
+	align-items: center;
 }
 #letterList {
 	padding: 0.25em 0.5em;
